--- a/src/components/store/BrandTicker.module.css
+++ b/src/components/store/BrandTicker.module.css
@@ -7,6 +7,7 @@
   user-select: none;
   -webkit-user-select: none;
   background: #fff;
+  width: 100%;
 }
 
 .ticker::-webkit-scrollbar {
