--- a/src/components/store/Header.module.css
+++ b/src/components/store/Header.module.css
@@ -3,6 +3,8 @@
   position: sticky;
   top: 0;
   z-index: 50;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .inner {
